--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
 POSTGRES_HOST=localhost
 POSTGRES_USER=root
 POSTGRES_PASSWORD=root1234
-POSTGRES_NAME=cafe-evaluable-b
+#POSTGRES_NAME=cafe-evaluable-b
+POSTGRES_NAME=database-deepseek
