--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-POSTGRES_HOST=localhost
-POSTGRES_USER=root
-POSTGRES_PASSWORD=root1234
-POSTGRES_NAME=cafe-evaluable
+POSTGRES_HOST=cafes-evaluable-2.cbcuhfxvj4iy.us-east-1.rds.amazonaws.com
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=ROOT1234
+POSTGRES_NAME=cafe-evaluable-2
