--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-POSTGRES_HOST=cafes-evaluable-2.cbcuhfxvj4iy.us-east-1.rds.amazonaws.com
+POSTGRES_HOST=db-cafes.clu0u0o2607s.us-east-1.rds.amazonaws.com
 POSTGRES_USER=postgres
-POSTGRES_PASSWORD=ROOT1234
-POSTGRES_NAME=cafe-evaluable-2
+POSTGRES_PASSWORD=postgres123
+POSTGRES_NAME=cafes-evaluable
