--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-POSTGRES_HOST=db-cafes.clu0u0o2607s.us-east-1.rds.amazonaws.com
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres123
-POSTGRES_NAME=cafes-evaluable
+#POSTGRES_HOST=db-cafes.clu0u0o2607s.us-east-1.rds.amazonaws.com
+POSTGRES_HOST=localhost
+POSTGRES_USER=root
+POSTGRES_PASSWORD=root1234
+POSTGRES_NAME=cafe-evaluable
